--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
   </div>
   <div id="about" class="section wide img wf-section">
     <div data-w-id="b126983d-9126-fc06-c81d-1318685e2add" style="-webkit-transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="wrap">
-      <div class="title">INTRODuction</div>
-      <h2>Nullam quis risus eget urna mollis ornare vel eu leo.</h2>
+      <div class="title" style="font-size: 40px;">INTRODuction</div>
+      <h2>Are you tired of waiting ages for your computer to crack complex encryption codes? Well, get ready to be blown away by the mind-bending power of Shor's algorithm! Picture this: a revolutionary mathematical wizardry that could potentially dismantle the unbreakable walls of modern cryptography in the blink of an eye. Strap in, because we're about to embark on a mind-boggling journey through the cutting-edge realm of quantum computing, where Shor's algorithm reigns supreme as the ultimate code-cracking superhero. Get ready to have your understanding of computational limits shattered as we dive into the enigmatic world of Shor's algorithm and uncover its jaw-dropping implications for the future of security and cryptography.</h2>
     </div>
     <div class="wrapper">
       <div class="text-block-4">This is some text inside of a div block.<br><br><br><br><br>‍</div>
