--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           
           By harnessing this power, Shor's algorithm can rapidly find the prime factors of large numbers, a task that would take traditional computers an astronomical amount of time. This ability to factorize large numbers efficiently poses a significant threat to many encryption methods, as it could potentially render them vulnerable to attacks.
           
-          In simpler terms, Shor's algorithm is a quantum magic trick that enables computers to quickly unravel the secrets of large numbers, which has profound implications for breaking encryption codes and challenging the security of many systems we rely on today.</h3>
+          In simpler terms, Shor's algorithm is a quantum magic trick that enables computers to quickly unravel the secrets of large numbers, which has profound implications for breaking encryption codes and challenging the security of many systems that we rely on today.</h3>
     </div>
     <div class="wrapper"></div>
 </div>
