--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div data-w-id="b126983d-9126-fc06-c81d-1318685e2add" style="-webkit-transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="wrap">
       <div id="introduction" class="title">INTRODuction</div>
       <div class="wrapper"></div>
-      <h2>Definition</h2>
+      <h2></h2>
       <p class="paragraph-7">Are you tired of waiting ages for your computer to crack complex encryption codes? Well, get ready to be blown away by the mind-bending power of Shor&#x27;s algorithm! Picture this: a revolutionary mathematical wizardry that could potentially dismantle the unbreakable walls of modern cryptography in the blink of an eye. Strap in, because we&#x27;re about to embark on a mind-boggling journey through the cutting-edge realm of quantum computing, where Shor&#x27;s algorithm reigns supreme as the ultimate code-cracking superhero. Get ready to have your understanding of computational limits shattered as we dive into the enigmatic world of Shor&#x27;s algorithm and uncover its jaw-dropping implications for the future of security and cryptography.<br></p>
       <h2>A More Technical Definition</h2>
       <p class="paragraph-8">Shor&#x27;s algorithm is a groundbreaking mathematical method designed to solve a particular problem: factoring large numbers into their prime factors. It was invented by Peter Shor, a brilliant mathematician, and has become one of the most significant discoveries in the field of quantum computing. Here&#x27;s the gist of it: Traditional computers, like the ones we use every day, struggle to factor large numbers efficiently. This difficulty forms the basis of many encryption systems used to secure online transactions and protect sensitive information. Shor&#x27;s algorithm takes advantage of the unique properties of quantum computers, which operate using quantum bits, or qubits, instead of the classical bits of traditional computers. Qubits can exist in multiple states simultaneously, a phenomenon known as superposition, allowing quantum computers to perform certain calculations at an incredibly accelerated rate. By harnessing this power, Shor&#x27;s algorithm can rapidly find the prime factors of large numbers, a task that would take traditional computers an astronomical amount of time. This ability to factorize large numbers efficiently poses a significant threat to many encryption methods, as it could potentially render them vulnerable to attacks. In simpler terms, Shor&#x27;s algorithm is a quantum magic trick that enables computers to quickly unravel the secrets of large numbers, which has profound implications for breaking encryption codes and challenging the security of many systems that we rely on today.<br></p>
@@ -106,6 +106,10 @@
     <div id="simulation" class="title">Simulation</div>
     <div class="html-embed w-embed w-script">
       <h2>Algorithm Demonstration</h2>
+      <h4>Step 1: Initialization</h4>
+      <p> For Shor's algorithm to properly function the number we want to factor must satisfy two conditions: </p>
+      <checkbox> N is composite(not prime)</checkbox>
+      <checkbox> Not a power of a prime</checkbox>
       <p>Enter a number to be factored (N):</p>
       <input id="N" type="number">
       <p>Enter another number (a):</p>
