--- a/index.html
+++ b/index.html
@@ -91,8 +91,9 @@
     <div data-w-id="d5ba5e87-b9ed-633f-6f62-a83bb76a24a6" style="-webkit-transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="wrap">
       <div id="circuit" class="title">circuit</div>
     </div>
-    <h2>Insert some info here.</h2>
-    <p class="paragraph-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p>
+    <h2>Shor's Circuit</h2>
+    <p class="paragraph-3">Below is the general layout of a quantum circuit that calculates Shor's algorithm.</p>
+    <p> To the left are 8 quibits all linked to </p>
     <div id="features" class="feature-wrap">
       <div>
         <div data-w-id="4593c4b7-56e8-060a-be57-648b0e08fc65" style="-webkit-transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 40PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="feature-content"></div>
@@ -176,6 +177,187 @@ function gcd(a, b) {
     return gcd(b, a % b);
   }
 }
+//computes the fourier tranform on an array 'reg'
+//returns the powers of the result, which is enough for finding the dominant frequency/period
+//this is a naive algorithm i know
+function fourier(reg,size) {
+	var freq = new Array(size);
+	for( var i = 0; i < size; i++ ) {
+		var n = new Complex(0,0);
+		for( var j = 0; j < size; j++) {
+			n.a += reg[j]*Math.cos(-2*Math.PI*i*j/size);
+			n.b += reg[j]*Math.sin(-2*Math.PI*i*j/size);
+		}
+		freq[i] = n.power();
+	}
+	return freq;
+}
+
+//represents a complex number , a + bi
+var Complex = Class.create({
+	initialize: function (a,b) {
+		this.a = a;
+		this.b = b;
+	},
+	//returns magnitude on the complex plane
+	magnitude: function () {
+		return Math.sqrt(this.a*this.a + this.b*this.b);
+	},
+	//square of magnitude
+	power: function () {
+		return (this.a*this.a + this.b*this.b);
+	}
+});
+
+
+//represents a quantum register of 'size' qubits
+var QReg = Class.create({
+	initialize: function (size) {
+		this.size = size;
+		//probability of each
+		//possible state of the qubits
+		this.states = Math.pow(2,size);
+		this.probs = new Array(this.states);
+		for( var i = 0; i < this.states; i++ ) {
+			//initializes probabilities equally
+			this.probs[i] = 1;
+		}
+		this.normalize(); 
+		//at this point, measuring the value of QReg
+		//would return a random value between 0 and size-1
+	},
+	//collapses the register and returns 
+	//the decimal value of the measured number
+	measure: function () {
+		var rand = Math.random(); //random 0 <= r < 1
+		var pLess = 0; //stores the probability that we read less than probs[i]
+		var pMore = 0; //stores the probability that we read more than probs[i]
+		
+		//check all probabilities and see if the random number chosen fits in the 'slot' of the given 'i'
+		for( var i = 0; i < this.states; i++ ) {
+			pMore += this.probs[i];
+			if( rand > pLess && rand < pMore ) {
+				//kay, we're measuring this one
+				//collapse state of everything else
+				for( var j = 0; j < this.states; j++ ) {
+					this.probs[j] = (j === i ? 1 : 0); 
+				}
+				//return read value
+				return i;
+			}
+			pLess += this.probs[i];
+		}
+		//uhoh, an error
+		return -1; 
+	},
+	//returns new register transformed throguh
+	//a^x mod n, x represented by the superposition of states
+	//in this register
+	modTransform: function (a,n) {
+		var out = new QReg(this.size);
+		//set output register to 0 first
+		for( var i = 0; i < this.states; i++ ) {
+			out.probs[i] = 0;
+		}
+		//classically calculate the a^x mod n for every
+		//possible state, and increment the probability
+		//for the result in the new register with the probability
+		//of getting that number from this register
+		for( var i = 0; i < this.states; i++ ) {
+			var result = expmod(a,i,n);
+			out.probs[result] += this.probs[i];
+		}
+		out.normalize();
+		//out now represents the superposition 
+		//of all possible outputs of a^x mod n
+		return out;
+		//the quantum register 'out' is entangled with this register
+		//so a measurement on 'out' also collapses positions of
+		//this register inconsistent with the measurement
+		//I couldn't think of a nice OOP way to handle that
+		//so the makeConsistent function makes the current register
+		//consistent with whatever the input measurement is
+	},
+	//makes this register's superposition consistent with
+	//the measurement from the register returned by the 'modTransform'
+	//function with base 'a' and mod 'n'
+	makeConsistent: function (a,n,measured) {
+		//for each possible state, we need to calculate
+		//a^X mod n again, and set the probability
+		//of that state accordingly
+		for( var i = 0; i < this.states; i++ ) {
+			var result = expmod(a,i,n);
+			//if result equals the value measured, this value would occur
+			this.probs[i] = ( result === measured ? 1 : 0 );
+		}
+		this.normalize();
+	},
+	//normalizes the register so the total probablity is 1
+	normalize: function () {
+		//find current total
+		var total = 0;
+		for( var i = 0; i < this.states; i++ ) {
+			total += this.probs[i];
+		}
+		//find scaling factor to reduce total to 1
+		//and apply it to all the states
+		var scale = 1.0 / total;
+		for( var i = 0; i < this.states; i++ ) {
+			this.probs[i] *= scale;
+		}
+	},
+	//returns a new QReg containing the amplitudes of the quantum transform
+	//of this QReg
+	quantFT: function () {
+		//perform regular ol' DFT on the probabilities
+		//of this register
+		var result = fourier(this.probs,this.states);
+		var newReg = new QReg(this.size);
+		//set the probabilities of newReg to the fourier transform
+		newReg.probs = result;
+		newReg.normalize();
+		//newReg now will return a k*this.states/period, where k is
+		//random between 0 < r <= r-1
+		return newReg;
+	},
+	//graphs the pdf of this register 
+	//using Plotr, to element 'e'
+	//with max being the max on the x-axis
+	//drawTicks is bool on whether to draw ticks
+	graph: function(e, max, drawTicks) {
+		//form probabilities
+		var pdf = new Array();
+		var ticks = new Array();
+		for( var i = 0; i < this.states; i++ ) {
+			pdf.push([i, this.probs[i]]);
+			if( i < max ) { ticks.push(i) }
+		}
+		if( !drawTicks ) ticks = null;
+		Flotr.draw(
+			e, 
+			[ pdf ],
+			{	
+				mouse:{
+					track: true,
+					color: 'purple',
+					sensibility: 1, // => distance to show point get's smaller
+					trackDecimals: 4,
+					trackFormatter: function(obj){ return 'x = ' + obj.x +', y = ' + obj.y; }
+				},
+				yaxis: {
+					min: 0, max: null
+				},
+				xaxis: {
+					ticks: ticks,
+					min: 0, max: max
+				},
+				points: {
+					show: true
+				}
+			}
+		);
+	}
+});
 </script>
     </div>
   </div>
