--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <a href="#circuit" class="nav-link w-nav-link">Circuit</a>
             <a href="#simulation" class="nav-link w-nav-link">Simulation</a>
             <a href="#applications" class="nav-link w-nav-link">Applications</a>
-            <a href="#" class="nav-link w-nav-link">Conclusion</a>
+            <a href="#conclusion" class="nav-link w-nav-link">Conclusion</a>
           </nav>
           <div class="menu-button w-nav-button">
             <div class="menu-icon w-icon-nav-menu"></div>
