--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <div class="section center wf-section"><img src="images/arrow.svg" alt="" class="arrow">
     <div data-w-id="6b220cb1-4b9c-7fb0-75b9-53ff4a6c35a2" style="-webkit-transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="hero-content">
       <h1 class="heading-3">Shor&#x27;s Algorithm</h1>
-      <h3 class="hero-subhead">The Quantum Code Breaker</h3>
+      <h3 class="hero-subhead">Quantum Breakthrough in Cybersecurity</h3>
     </div><img src="images/quantum-computer.jpeg" style="-webkit-transform:translate3d(0, 60PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 60PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 60PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 60PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="77e69727-c455-8e07-0990-833a661c94ea" sizes="(max-width: 479px) 80vw, (max-width: 991px) 70vw, 99vw" srcset="images/quantum-computer-p-500.jpeg 500w, images/quantum-computer-p-800.jpeg 800w, images/quantum-computer.jpeg 960w" alt="" class="hero-image">
   </div>
   <div id="about" class="section wide img wf-section">
