--- a/index.html
+++ b/index.html
@@ -54,10 +54,8 @@
       <div id="introduction" class="title"><strong>Introduction and Application</strong></div>
       <div class="wrapper"></div>
       <p class="paragraph-7">Are you tired of waiting ages for your computer to crack complex encryption codes? Well, get ready to be blown away by the mind-bending power of Shor's algorithm! Picture this: a revolutionary mathematical algorithm that could potentially dismantle the walls of modern cryptography. Get ready to have your understanding of computational limits shattered as we dive into the enigmatic world of Shor's algorithm and uncover its jaw-dropping implications for the future of security and cryptography.
-
-        Invented in 1994 by Peter Shor, Shor's algorithm is a groundbreaking mathematical method designed to solve a particular problem: factoring large numbers into their prime factors, something that mathematicians deemed impossible for a long time. 
-        
-          Why is something as trivial as factoring numbers important? RSA encryption, the encryption methodology used by everyday web browsers, bank accounts, and essentially any link starting with “https://” is based on prime factorization.<br></p>
+        Invented in 1994 by Peter Shor, Shor's algorithm is a groundbreaking mathematical method designed to solve a particular problem: factoring large numbers into their prime factors, something that mathematicians deemed impossible for a long time.<br></p>
+      <p class="paragraph-8">Why is something as trivial as factoring numbers important? RSA encryption, the encryption methodology used by everyday web browsers, bank accounts, and essentially any link starting with “https://” is based on prime factorization.</p>
       <h2 id="important_terms">Important Terms</h2>
       <p class="paragraph-5"><strong>These are the definitions of some important terms that you&#x27;ll be seeing on this page:<br></strong></p>
       <h3 class="heading-4"><strong class="bold-text">Quantum Computing</strong></h3>
