--- a/index.html
+++ b/index.html
@@ -56,16 +56,21 @@
       <p class="paragraph-7">Are you tired of waiting ages for your computer to crack complex encryption codes? Well, get ready to be blown away by the mind-bending power of Shor's algorithm! Picture this: a revolutionary mathematical algorithm that could potentially dismantle the walls of modern cryptography. Get ready to have your understanding of computational limits shattered as we dive into the enigmatic world of Shor's algorithm and uncover its jaw-dropping implications for the future of security and cryptography.
         Invented in 1994 by Peter Shor, Shor's algorithm is a groundbreaking mathematical method designed to solve a particular problem: factoring large numbers into their prime factors, something that mathematicians deemed impossible for a long time.<br></p>
       <p class="paragraph-8">Why is something as trivial as factoring numbers important? RSA encryption, the encryption methodology used by everyday web browsers, bank accounts, and essentially any link starting with “https://” is based on prime factorization.</p>
+      
       <h2 id="important_terms">Important Terms</h2>
-      <p class="paragraph-5"><strong>These are the definitions of some important terms that you&#x27;ll be seeing on this page:<br></strong></p>
-      <h3 class="heading-4"><strong class="bold-text">Quantum Computing</strong></h3>
-      <p class="paragraph-6">Quantum computing refers to a paradigm of computing that utilizes the principles of quantum mechanics to perform computational tasks. Unlike classical computers that use bits to represent and process information as either 0 or 1, quantum computers employ quantum bits or qubits. Qubits can exist in a superposition of states, enabling quantum computers to perform computations simultaneously on multiple states and potentially solve certain problems more efficiently than classical computers.<br></p>
-      <h3 class="heading-4"><strong class="bold-text">Qubit</strong></h3>
-      <p class="paragraph-6">A qubit is the basic unit of information in quantum computing. It is analogous to a classical bit but represents a quantum system that can exist in a superposition of states, such as 0 and 1, allowing for simultaneous processing of multiple states.<br></p>
-      <h3 class="heading-4"><strong class="bold-text">Superposition</strong></h3>
-      <p class="paragraph-6">Superposition is a fundamental concept in quantum mechanics. It refers to the property of a quantum system, such as a qubit, to exist in multiple states simultaneously. While classical bits can represent only one state at a time (either 0 or 1), a qubit in superposition can represent a combination of both states. This means that a qubit can be in a state that is a linear combination of 0 and 1, such as 0.5|0⟩ + 0.5|1⟩. Superposition allows quantum computers to perform parallel computations and explore multiple possibilities simultaneously, providing a potential computational advantage.<br></p>
-      <h3 class="heading-4"><strong class="bold-text">Entanglement</strong></h3>
-      <p class="paragraph-6">Entanglement is a phenomenon that occurs when two or more qubits become correlated in such a way that the state of one qubit is dependent on the state of another, regardless of the distance between them. In an entangled state, the qubits lose their individual identities and form a collective state. This means that measuring one entangled qubit instantly provides information about the state of the other, even if they are physically separated. Entanglement is a powerful resource in quantum computing and enables various applications such as quantum teleportation, quantum communication, and enhanced computational capabilities. It plays a crucial role in the potential speedup of certain algorithms in quantum computing.<br></p>
+      <OL>
+        <LI>Qubit:
+          <UL>
+            <li>A qubit is the basic unit of information in quantum computing. It is analogous to a classical bit but represents a quantum system that can exist in a superposition of states, such as 0 and 1, allowing for simultaneous processing of multiple states.</li>
+            <LI>List item 2
+        </UL>
+        <LI>Secondary Heading
+        <UL>
+        <LI>List item 1
+        <LI>List item 2
+        </UL>
+      </OL>
+
       <h2 id="process">Process</h2>
       <p class="paragraph-5"><strong>Shor&#x27;s algorithm involves several main steps to factorize a large number efficiently:<br></strong></p>
       <h3 class="heading-5"><strong>Initialization</strong></h3>
