--- a/index.html
+++ b/index.html
@@ -58,19 +58,16 @@
       <p class="paragraph-8">Why is something as trivial as factoring numbers important? RSA encryption, the encryption methodology used by everyday web browsers, bank accounts, and essentially any link starting with “https://” is based on prime factorization.</p>
       
       <h2 id="important_terms">Important Terms</h2>
-      <OL>
-        <LI>Qubit:
-          <UL>
-            <li>A qubit is the basic unit of information in quantum computing. It is analogous to a classical bit but represents a quantum system that can exist in a superposition of states, such as 0 and 1, allowing for simultaneous processing of multiple states.</li>
-            <LI>List item 2
-        </UL>
+      <LI>Qubit:
+        <UL TYPE="circle">
+          <li>A qubit is the basic unit of information in quantum computing. It is analogous to a classical bit but represents a quantum system that can exist in a superposition of states, such as 0 and 1, allowing for simultaneous processing of multiple states.</li>
+      </UL>
         <LI>Secondary Heading
-        <UL>
-        <LI>List item 1
-        <LI>List item 2
-        </UL>
-      </OL>
-
+      <UL>
+       <LI>List item 1
+       <LI>List item 2
+      </UL>
+       
       <h2 id="process">Process</h2>
       <p class="paragraph-5"><strong>Shor&#x27;s algorithm involves several main steps to factorize a large number efficiently:<br></strong></p>
       <h3 class="heading-5"><strong>Initialization</strong></h3>
