need to now un-center text

--- a/index.html
+++ b/index.html
@@ -58,14 +58,24 @@
       <p class="paragraph-8">Why is something as trivial as factoring numbers important? RSA encryption, the encryption methodology used by everyday web browsers, bank accounts, and essentially any link starting with “https://” is based on prime factorization.</p>
       
       <h2 id="important_terms">Important Terms</h2>
+      <LI>Qunatum Computing:
+        <UL TYPE="circle">
+          <li>Quantum computing refers to a paradigm of computing that utilizes the principles of quantum mechanics to perform computational tasks. Unlike classical computers that use bits to represent and process information as either 0 or 1, quantum computers employ quantum bits or qubits.</li>
+          <li>Qubits can exist in a superposition of states, enabling quantum computers to perform computations simultaneously on multiple states and potentially solve certain problems more efficiently than classical computers.</li>
+      </UL>
       <LI>Qubit:
         <UL TYPE="circle">
           <li>A qubit is the basic unit of information in quantum computing. It is analogous to a classical bit but represents a quantum system that can exist in a superposition of states, such as 0 and 1, allowing for simultaneous processing of multiple states.</li>
       </UL>
-        <LI>Secondary Heading
-      <UL>
-       <LI>List item 1
-       <LI>List item 2
+      <LI>Superposition:
+        <UL TYPE="circle">
+          <li>Superposition is a fundamental concept in quantum mechanics. It refers to the property of a quantum system, such as a qubit, to exist in multiple states simultaneously. While classical bits can represent only one state at a time (either 0 or 1), a qubit in superposition can represent a combination of both states. This means that a qubit can be in a state that is a linear combination of 0 and 1, such as 0.5|0⟩ + 0.5|1⟩.</li>
+          <li>Superposition allows quantum computers to perform parallel computations and explore multiple possibilities simultaneously, providing a potential computational advantage.</li>
+      </UL>
+      <LI>Entanglement:
+        <UL TYPE="circle">
+          <li>Entanglement is a phenomenon that occurs when two or more qubits become correlated in such a way that the state of one qubit is dependent on the state of another, regardless of the distance between them. Once entangled, each qubit loses its individual state so that measuring one entangled qubit instantly provides information about the state of the other.</li>
+          <li>Entanglement is a powerful resource in quantum computing and enables various applications such as quantum teleportation, quantum communication, and enhanced computational capabilities. It plays a crucial role in the potential speedup of certain algorithms in quantum computing.</li>
       </UL>
        
       <h2 id="process">Process</h2>
