--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         While in the graph, you can see that the Shor's algorithm has polynomial runtime of d^3.</p>
         <img src = "images/IMG_9394.jpg" alt = "Graph for Shor's vs Classical Algorithm">
      
-      <h2 id="important_terms">Important Terms</h2>
+      <h2 id="important_terms" text-align:left>Important Terms</h2>
       <LI><h4>Quantum Computing:</h4>
         <UL TYPE="circle">
           <li>Quantum computing refers to a paradigm of computing that utilizes the principles of quantum mechanics to perform computational tasks. Unlike classical computers that use bits to represent and process information as either 0 or 1, quantum computers employ quantum bits or qubits.</li>
