--- a/circuit.html
+++ b/circuit.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h2>Hover over the circuits to know about the parts, and click on them to know more.</h2>
    <img src="images/shorcircuit-p-1080.png" usemap ="#cicuitDiagram">
    <map name ="cicuitDiagram">
     <area title = "Hadamard(H) gate - gives an equal chance for the qubit to be 0 or 1' when measured" shape = "rect" coords = "20,0,50,240" alt = "Hadamard Gate"
