--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a href="#Introduction" class="nav-link w-nav-link">Introduction</a>
             <a href="#important_terms" class="nav-link w-nav-link">Important Terms</a>
             <a href="#process" class="nav-link w-nav-link">Process</a>
-            <a href="#circuit" class="nav-link w-nav-link">Circuit</a>
+            <a href="#Circuit" class="nav-link w-nav-link">Circuit</a>
             <a href="#simulation" class="nav-link w-nav-link">Simulation</a>
             <a href="#applications" class="nav-link w-nav-link">Applications and Conclusion</a>
           </nav>
